Update -fix edit, delete button; add comments in interface- (index.html, main.js)

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                 <a class="nav-link d-flex flex-fill" data-bs-toggle="collapse" href="#id1">
                     Anton
                 </a>
-                <button type="button" class="btn btn-icon" id="edit">🖊</span>Edit</button>
-                <button type="button" class="btn btn-icon" id="delete">🗑</span>Delete</button>
+                <button type="button" class="btn btn-icon" onclick='editContactFunction(this)'>🖊</span>Edit</button>
+                <button type="button" class="btn btn-icon" onclick='deleteContactFunction(this)'>🗑</span>Delete</button>
             </div>
             <div class="collapse" id="id1">
                 <div class="card card-body">
