Update -change style of header and <li> elements- (index.html, main.js)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body class="bg-dark">
 <header>
-    <nav class="navbar navbar-dark bg-dark">
+    <nav class="navbar navbar-dark bg-dark bg-gradient">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html" id="main">Contact manager</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
