--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                 <a class="nav-link d-flex flex-fill" data-bs-toggle="collapse" href="#id1">
                     Anton
                 </a>
+                <button type="button" class="btn btn-icon" onclick='updateLastCall()'>🕿</span>Call</button>
                 <button type="button" class="btn btn-icon" onclick='editContactFunction(this)'>🖊</span>Edit</button>
                 <button type="button" class="btn btn-icon" onclick='deleteContactFunction(this)'>🗑</span>Delete</button>
             </div>
