--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </li>
     </ul>
     <div class="collapse text-white mb-4" id="aboutUs">
-        <span class="d-flex justify-content-center">Практична робота "Менеджер контактів" виконана студентами групи КІУКІ-19-6 Горєловим Даніїлом, Ляпіним Ярославом, Коротким Антоном</span>
+        <span class="d-flex justify-content-center">Практична робота "Менеджер контактів" виконана студентами групи КІУКІ-19-6 Гуренко Даніїлом, Ляпіним Ярославом, Коротким Антоном</span>
     </div>
 </footer>
 </body>
