Update -add more info to footer- (index.html)

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
     </nav>
 </header>
 
-<main id="mainContent">
+<main id="mainContent" class="mb-3">
 <!--  List Of Contacts  -->
     <ul class="list-group ms-2 me-2" id="listOfContact">
         <li class="list-group-item">
             <div class="d-flex flex-row align-items-center">
                 <a class="nav-link d-flex flex-fill" data-bs-toggle="collapse" href="#id1">
-                    Anton
+                    None
                 </a>
                 <button type="button" class="btn btn-icon" onclick='updateLastCall()'>🕿</span>Call</button>
                 <button type="button" class="btn btn-icon" onclick='editContactFunction(this)'>🖊</span>Edit</button>
@@ -128,6 +128,15 @@
     <ul class="list-group list-group-flush d-flex flex-row justify-content-center" id="bottomMenu">
         <li class="list-group-item bg-transparent text-white ">
             <a class="nav-link" href="https://github.com/KorotkyiAnton/practice" target="_blank">Git Hub</a>
+        </li>
+        <li class="list-group-item bg-transparent text-white ">
+            <a class="nav-link" href="https://korotkyianton.github.io/practice/" target="_blank">Git Page</a>
+        </li>
+        <li class="list-group-item bg-transparent text-white ">
+            <a class="nav-link" href="https://script.google.com/u/2/home/projects/1lLY9nZ-XE2rTkORuHijunPuSXGEwi_Dm6VT_SDKnee3xdyVEKLcXM8kW/edit" target="_blank">Google Script</a>
+        </li>
+        <li class="list-group-item bg-transparent text-white ">
+            <a class="nav-link" href="https://docs.google.com/spreadsheets/d/1izn5fZ1-Iurdz9EKH4lxSu72BZVtOKfpoQpzLVqHpL0/edit#gid=0" target="_blank">Google Spreadsheet</a>
         </li>
         <li class="list-group-item bg-transparent text-white">
             <a class="nav-link" data-bs-toggle="collapse" href="#aboutUs">About Us</a>
