--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
             integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
             crossorigin="anonymous"></script>
     <script src="main.js"></script>
+    <style>
+        .preloader {
+            width: 30%;
+        }
+    </style>
 </head>
 <body class="bg-dark d-flex flex-column min-vh-100">
 <header class="mb-2">
@@ -44,7 +49,7 @@
                         <option>Phone</option>
                         <option>Email</option>
                         <option>Address</option>
-                        <optionp>Last Call</optionp>
+                        <option>Last Call</option>
                         <option>Addition Info</option>
                         <option>Description</option>
                     </select>
@@ -81,6 +86,9 @@
                     <p>Description: </p>
                 </div>
             </div>
+        </li>
+        <li class="list-group-item d-flex justify-content-lg-center flex-lg-fill">
+            <img class="preloader " src="monophy.gif">
         </li>
     </ul>
 
