Fix -add additionalInfo description fields- (index.html, main.js)

--- a/index.html
+++ b/index.html
@@ -131,6 +131,14 @@
             <label for="birthday" class="form-label text-white">Birthday</label>
             <input type="text" class="form-control bg-dark text-white" id="birthday" aria-describedby="emailHelp">
         </div>
+        <div class="mb-2">
+            <label for="additionalInfo" class="form-label text-white">Additional Info</label>
+            <input type="text" class="form-control bg-dark text-white" id="additionalInfo" aria-describedby="emailHelp">
+        </div>
+        <div class="mb-2">
+            <label for="description" class="form-label text-white">Description</label>
+            <input type="text" class="form-control bg-dark text-white" id="description" aria-describedby="emailHelp">
+        </div>
         <button type="submit" class="btn btn-outline-light" id="btnSubmit" onclick="SubmitBtn();">Submit</button>
     </div>
 
