Refactoring -fix small syntax mistakes - (index.html, main.js)

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                     </li>
                 </ul>
                 <div id="searchForm" class="d-flex" role="search">
+                    <label for="searchSelect"></label>
                     <select class="form-select me-2" id="searchSelect">
                         <option>Name</option>
                         <option>Company</option>
@@ -97,7 +98,7 @@
             </div>
         </li>
         <li class="list-group-item d-flex justify-content-lg-center flex-lg-fill">
-            <img class="preloader " src="monophy.gif">
+            <img class="preloader " src="monophy.gif" alt="preloader">
         </li>
     </ul>
 
