--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@
 </header>
 
 <main id="mainContent" class="mb-3">
+<!--  Sort  -->
+    <div id="sortForm" class="ms-3 me-3 mb-3">
+        <label class="form-label text-white d-flex"><span class="w-25 lh-2">Sort by:</span>
+        <select class="form-control bg-dark text-white flex-fill" id="sortParam" onchange="sort()">
+            <option value="lastCall">Recent</option>
+            <option value="name">Name (A-Z)</option>
+        </select>
+        </label>
+    </div>
+
 <!--  List Of Contacts  -->
     <ul class="list-group ms-2 me-2" id="listOfContact">
         <li class="list-group-item">
@@ -114,7 +124,11 @@
         </div>
         <div class="mb-2">
             <label for="group" class="form-label text-white">Group</label>
-            <input type="text" class="form-control bg-dark text-white" id="group" aria-describedby="emailHelp">
+            <select class="form-control bg-dark text-white" id="group">
+                <option value="friend">friend</option>
+                <option value="relative">relative</option>
+                <option value="colleague">colleague</option>
+            </select>
         </div>
         <div class="mb-2">
             <label for="phone" class="form-label text-white">Phone</label>
