Update -add hashing ti more function- (main.js)

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
             </div>
         </li>
         <li class="list-group-item d-flex justify-content-lg-center flex-lg-fill">
+            <div>Wait for loading...</div>
             <img class="preloader " src="monophy.gif" alt="preloader">
         </li>
     </ul>
