Update -add not stable update of hashing function for edit and add methods- (main.js)

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </div>
         <div class="mb-2">
             <label for="phone" class="form-label text-white">Phone</label>
-            <input type="text" class="form-control bg-dark text-white" id="phone" aria-describedby="emailHelp">
+            <input type="number" class="form-control bg-dark text-white" id="phone" aria-describedby="emailHelp">
         </div>
         <div class="mb-2">
             <label for="email" class="form-label text-white">Email</label>
