Update -add full hashing and sort method (without refactoring)- (main.js)

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <div id="contactForm" class="ms-3 me-3">
         <div class="mb-2">
             <label for="name" class="form-label text-white">Name</label>
-            <input type="text" class="form-control bg-dark text-white" id="name" aria-describedby="emailHelp">
+            <input type="text" class="form-control bg-dark text-white" id="name" aria-describedby="emailHelp" required>
         </div>
         <div class="mb-2">
             <label for="company" class="form-label text-white">Company</label>
@@ -132,12 +132,12 @@
             </select>
         </div>
         <div class="mb-2">
-            <label for="phone" class="form-label text-white">Phone</label>
-            <input type="number" class="form-control bg-dark text-white" id="phone" aria-describedby="emailHelp">
+            <label for="phone" class="form-label text-white" id="Label-phone">Phone</label>
+            <input type="number" class="form-control bg-dark text-white" id="phone" aria-describedby="emailHelp" required>
         </div>
         <div class="mb-2">
             <label for="email" class="form-label text-white">Email</label>
-            <input type="email" class="form-control bg-dark text-white" id="email" aria-describedby="emailHelp">
+            <input type="email" class="form-control bg-dark text-white" id="email" aria-describedby="emailHelp" required>
         </div>
         <div class="mb-2">
             <label for="address" class="form-label text-white">Address</label>
