--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
         <div class="mb-2">
             <label for="name" class="form-label text-white">Name</label>
             <input type="text" class="form-control bg-dark text-white" id="name" aria-describedby="emailHelp" required>
+            <div id="emptyName" class="invalid-feedback collapse">
+                This field is required.
+            </div>
         </div>
         <div class="mb-2">
             <label for="company" class="form-label text-white">Company</label>
@@ -132,12 +135,18 @@
             </select>
         </div>
         <div class="mb-2">
-            <label for="phone" class="form-label text-white" id="Label-phone">Phone</label>
+            <label for="phone" class="form-label text-white" id="Label-phone">Phone Number</label>
             <input type="number" class="form-control bg-dark text-white" id="phone" aria-describedby="emailHelp" required>
+            <div id="emptyPhone" class="invalid-feedback collapse">
+                Incorrect phone number.
+            </div>
         </div>
         <div class="mb-2">
             <label for="email" class="form-label text-white">Email</label>
             <input type="email" class="form-control bg-dark text-white" id="email" aria-describedby="emailHelp" required>
+            <div id="emptyEmail" class="invalid-feedback collapse">
+                Incorrect email.
+            </div>
         </div>
         <div class="mb-2">
             <label for="address" class="form-label text-white">Address</label>
