Update -change unique field to name- (main.js)

--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
             </select>
         </div>
         <div class="mb-2">
-            <label for="phone" class="form-label text-white" id="Label-phone">Phone Number<sup>*</sup></label>
+            <label for="phone" class="form-label text-white" id="Label-phone">Phone Number</label>
             <input type="text" class="form-control bg-dark text-white" id="phone" aria-describedby="emailHelp" required>
             <div id="emptyPhone" class="invalid-feedback collapse">
                 Incorrect phone number.
             </div>
         </div>
         <div class="mb-2">
-            <label for="email" class="form-label text-white">Email<sup>*</sup></label>
+            <label for="email" class="form-label text-white">Email</label>
             <input type="email" class="form-control bg-dark text-white" id="email" aria-describedby="emailHelp" required>
             <div id="emptyEmail" class="invalid-feedback collapse">
                 Incorrect email.
