Update -fix edit method- (main.js)

--- a/index.html
+++ b/index.html
@@ -161,6 +161,10 @@
             <label for="birthday" class="form-label text-white">Birthday</label>
             <input type="text" class="form-control bg-dark text-white" id="birthday" aria-describedby="emailHelp">
         </div>
+        <div class="mb-2 collapse">
+            <label for="lastCall" class="form-label text-white" hidden>Last Call</label>
+            <input type="text" class="form-control bg-dark text-white" id="lastCall" aria-describedby="emailHelp" hidden>
+        </div>
         <div class="mb-2">
             <label for="additionalInfo" class="form-label text-white">Additional Info</label>
             <input type="text" class="form-control bg-dark text-white" id="additionalInfo" aria-describedby="emailHelp">
